--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ httpx==0.28.1; python_version >= '3.8'
 huggingface-hub==0.27.1; python_full_version >= '3.8.0'
 idna==3.10; python_version >= '3.6'
 jinja2==3.1.5; python_version >= '3.7'
+librosa
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
@@ -46,8 +47,10 @@ semantic-version==2.10.0; python_version >= '2.7'
 shellingham==1.5.4; python_version >= '3.7'
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.1; python_version >= '3.7'
-speechrecognition==3.13.0; python_version >= '3.9'
+soundfile
+SpeechRecognition==3.13.0; python_version >= '3.9'
 starlette==0.41.3; sys_platform != 'emscripten'
+time
 tomlkit==0.13.2; python_version >= '3.8'
 tqdm==4.67.1; python_version >= '3.7'
 typer==0.15.1; sys_platform != 'emscripten'
