--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,6 @@ semantic-version==2.10.0; python_version >= '2.7'
 shellingham==1.5.4; python_version >= '3.7'
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.1; python_version >= '3.7'
-soundfile
 SpeechRecognition==3.13.0; python_version >= '3.9'
 starlette==0.41.3; sys_platform != 'emscripten'
 tomlkit==0.13.2; python_version >= '3.8'
@@ -57,3 +56,5 @@ urllib3==2.3.0; python_version >= '3.9'
 uvicorn==0.34.0; sys_platform != 'emscripten'
 websockets==14.1; python_version >= '3.9'
 python-dotenv
+librosa
+soundfile
